# tina-transcription-api

./: .gitignore  README.md  TODO.md  api_restart.sh  api_stop.sh  frontend_restart.sh  frontend_stop.sh
UI_frontend/: .env_template  .gitignore  ARCHITECTURE.md  DESCRIPTION.md  README.md  db.py  main.py  pyproject.toml
UI_frontend/static/: index.html
UI_frontend/static/css/: styles.css
UI_frontend/static/js/: api.js  app.js  folders.js  sidebar.js  state.js  transcript.js  upload.js  util.js
api/: .env_template  TODO.md  evaluate.py  pyproject.toml
api/app/: config.py  diarize.py  hybrid.py  kenlm.py  lang_id.py  main.py  models.py  punctuate.py  utils.py
api/tests/: conftest.py  test_api.py  test_diarize.py  test_hybrid.py  test_utils.py
api_frontend/: .env_template  main.py  pyproject.toml
api_frontend/static/: index.html
